Fix colours on project pages, ignore text if it's just whitespace

--- a/css/app-status.styl
+++ b/css/app-status.styl
@@ -1,5 +1,6 @@
 .app-status
   background: BACKGROUND
+  color: FOREGROUND
   border: 1px solid ZOONIVERSE_TEAL
   border-radius: 1em
   padding: 0.5em 1em
